# StopZoomingDammit

./: .gitignore  README.md
qmake/: build  qmake.pro
src/: CMakeLists.txt  zoom.c
